feat: create and list user

--- a/picpaysimplificado/src/main/resources/application.properties
+++ b/picpaysimplificado/src/main/resources/application.properties
@@ -1,13 +1,21 @@
 spring.application.name=picpaysimplificado
-# H2 Connection
+#spring.datasource.url=jdbc:postgresql://localhost:5433/picpay-db
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.hibernate.ddl-auto=none
+
+# H2 connection
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
-# H2 Client
+# H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Show SQL
+# Show SQL on console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
